--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Anim Coffee</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
@@ -43,7 +43,7 @@
             </div>
         </div>
     </nav>
-    <div class="card" style="width: 18rem; left: 16px; top: 10">
+    <div class="card" style="width: 18rem; left: 30px; top: 10">
         <img src="https://upload.wikimedia.org/wikipedia/en/5/5b/Eromanga_Sensei%2C_volume_1.jpg"
             class="card-img-top" alt="...">
         <div class="card-body">
