--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
             </div>
         </div>
     </nav>
-    <div class="card" style="width: 18rem; left: 30px; top: 10">
+    <div class="card" style="width: 30rem;">
         <img src="https://upload.wikimedia.org/wikipedia/en/5/5b/Eromanga_Sensei%2C_volume_1.jpg"
             class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                the
-                card's content.</p>
+            <h5 class="card-title">Eromanga Sensei</h5>
+            <p class="card-text">anime ini menceritakan seorang anak introvert yang pantai menggambar ilustrasi yang erotis.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
