--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>AnimCoffee</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
@@ -43,7 +43,8 @@
             </div>
         </div>
     </nav>
-    <div class="card" style="width: 30rem;">
+    <div class="row">
+        <div class="card" style="width: 100rem;">
         <img src="https://upload.wikimedia.org/wikipedia/en/5/5b/Eromanga_Sensei%2C_volume_1.jpg"
             class="card-img-top" alt="...">
         <div class="card-body">
@@ -51,6 +52,7 @@
             <p class="card-text">Anime ini menceritakan seorang anak introvert yang pantai menggambar ilustrasi yang erotis.</p>
             <a href="#" class="btn btn-primary">Tonton</a>
         </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
